--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
+:root{
+  --white: #e8e8e8;
+  --black: #272727;
+  --blue: #007bff;
+  --red: #dc3545;
+  --green: #28a745;
+  --grey: #6c757d;
+  --darkgrey: #343a40;
+
+}
+
+
+
 body {
+  height: 200vh;
+  font-family: "Inter", sans-serif;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--black);
+  color: var(--white);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+::selection{
+  background-color: var(--blue);  
+  color: var(--white);
+}
+
+::-webkit-scrollbar {
+  width: 0.3 rem;
+
+}
+::-webkit-scrollbar-thumb {
+  background-color: var(--blue);
+  border-radius: 10px;
+}
+::-webkit-scrollbar-track {
+  background-color: var(--darkgrey);
+} 
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--blue);
 }
