--- a/src/index.css
+++ b/src/index.css
@@ -10,11 +10,21 @@
   --darkgrey: #343a40;
 
 }
+.rootDark{
+  --white: #272727;
+  --black: #e8e8e8;
+  --blue: #007bff;
+  --red: #dc3545;
+  --green: #28a745;
+  --grey: #6c757d;
+  --darkgrey: #343a40;
+
+}
 
 
 
 body {
-  height: 200vh;
+  /* height: 200vh; */
   font-family: "Inter", sans-serif;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -44,4 +54,8 @@ body {
 } 
 ::-webkit-scrollbar-thumb:hover {
   background-color: var(--blue);
+}
+a{
+  text-decoration: none !important;
+  color: var(--white)!important;
 }
