--- a/src/components/Common/Button/styles.css
+++ b/src/components/Common/Button/styles.css
@@ -5,10 +5,32 @@
     border-radius: 3rem;
     font-weight: 600;
     cursor: pointer;
+    border: 2px solid var(--blue);
+    text-align: center;
+    min-width: 100px;
 }
 
 
 .btn:hover{
    box-shadow: 5px 5px 10px rgba(58,128,233, 0.5);
+    transition: all 0.3s ease;
+}
+.outlined-btn{
+    background-color: var(--black);
+    border: 2px solid var(--blue);
+    color: var(--white);
+    padding: 0.5rem 1rem;
+    border-radius: 3rem;
+    font-weight: 600;
+    cursor: pointer;
+    text-align: center;
+    min-width: 100px;
+}
+
+
+.outlined-btn:hover{
+   /* box-shadow: 5px 5px 10px rgba(58,128,233, 0.5);
+    */
+    background-color: var(--blue);
     transition: all 0.3s ease;
 }
