--- a/src/components/Common/Header/styles.css
+++ b/src/components/Common/Header/styles.css
@@ -8,9 +8,9 @@
     background-color: var(--black);
     color: var(--white);
     /* position: -webkit-sticky; */
-    /* position: sticky; */
+    position: sticky;
     top: 0;
-    /* z-index: 1000; */
+    z-index: 1000;
 }
 .logo{
     font-size: 1.2rem ;
