--- a/src/components/LandingPage/Main/styles.css
+++ b/src/components/LandingPage/Main/styles.css
@@ -1,13 +1,13 @@
 .flex-info {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: start;
   margin-top: 20px;
   padding: 0.5rem 3rem;
-} 
+}
 
-
-.first-heading, .second-heading {
+.first-heading,
+.second-heading {
   font-size: 7rem;
   margin: 0;
   /* font-weight: 600;
@@ -15,32 +15,77 @@
   margin-bottom: 1rem; */
 }
 
-.first-heading{
-    color: var(--white);
+.first-heading {
+  color: var(--white);
 
-    -webkit-text-stroke-width: 3px;
-    -webkit-text-stroke-color: var(--white)
-  }
+  -webkit-text-stroke-width: 3px;
+  -webkit-text-stroke-color: var(--white);
+}
 
-  .first-heading:hover{
-    color: var(--black);
-    /* -webkit-text-stroke-width: 4px; */
-    -webkit-text-stroke-color: var(--white);
-    transition: all 0.3s ease;
-  }
+.first-heading:hover {
+  color: var(--black);
+  /* -webkit-text-stroke-width: 4px; */
+  -webkit-text-stroke-color: var(--white);
+  transition: all 0.3s ease;
+}
 
-
+.second-heading {
+  color: var(--blue);
+}
+.p-tag {
+  font-size: 1.2rem;
+  color: var(--grey);
+}
+.btn-flex {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 1.5rem;
+  margin-top: 2rem;
+}
+.right-component {
+  width: 50%;
+  position: relative;
+  padding-right: 4rem;
+}
+.iphone {
+  position: absolute;
+  z-index: 100;
+  min-width: 300px;
+  width: 50%;
+  right: 0;
+}
+.gradinet {
+  position: absolute;
+  min-width: 250px;
+  width: 40%;
+  top: 4rem;
+  right: 0;
+}
+@media only screen and (max-width: 1100px) {
+  .first-heading,
   .second-heading {
-    color: var(--blue);
+    font-size: 3.5rem;
+    margin: 0;
+    /* font-weight: 600;
+    color: var(--black);
+    margin-bottom: 1rem; */
   }
-  .p-tag{
-    font-size: 1.2rem;
-    color: var(--grey);
+}
+@media only screen and (max-width: 880px) {
+  .iphone {
+    /* position: absolute; */
+    z-index: 100;
+    min-width: 250px;
+    width: 50%;
+    /* right: 0; */
   }
-  .btn-flex{
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 1.5rem;
-    margin-top: 2rem;
+  .gradinet {
+    /* position: absolute; */
+    min-width: 200px;
+    /* width: 40%; */
+    top: 4rem;
+    /* right: 0; */
   }
+}
+
