--- a/src/components/LandingPage/Main/styles.css
+++ b/src/components/LandingPage/Main/styles.css
@@ -65,27 +65,55 @@
 @media only screen and (max-width: 1100px) {
   .first-heading,
   .second-heading {
-    font-size: 3.5rem;
-    margin: 0;
+    font-size: 4.5rem;
+    /* margin: 0; */
     /* font-weight: 600;
     color: var(--black);
     margin-bottom: 1rem; */
   }
 }
-@media only screen and (max-width: 880px) {
-  .iphone {
-    /* position: absolute; */
-    z-index: 100;
-    min-width: 250px;
-    width: 50%;
-    /* right: 0; */
+@media only screen and (max-width: 800px) {
+  .flex-info{
+    flex-direction: column;
+
+    /* align-items: center; */
   }
-  .gradinet {
-    /* position: absolute; */
-    min-width: 200px;
-    /* width: 40%; */
-    top: 4rem;
-    /* right: 0; */
+  .right-component{
+    display: block;
+    margin: auto;
+    margin-top:3rem;
   }
+  .iphone{
+    left:-2rem;
+
+  }
+   .gradinet{
+    left: 20%;
+   }
+   .left-component{
+     width: 100%;
+   }
+   .first-heading,
+  .second-heading {
+    font-size: 3.5rem;
+    /* margin: 0; */
+    text-align: center;
+    /* font-weight: 600;
+    color: var(--black);
+    margin-bottom: 1rem; */
+  }
+  .p-tag{
+    font-size: 1rem;
+    text-align: center;
+  }
+  .btn-flex{
+    justify-content: center;
+    /* margin: auto; */
+  }
+  .first-heading{
+    -webkit-text-stroke-width: 1px;
+  }
+  
+
 }
 
