--- a/src/index.css
+++ b/src/index.css
@@ -59,3 +59,10 @@ a{
   text-decoration: none !important;
   color: var(--white)!important;
 }
+img {
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+  user-select: none;
+}
